<resources>
    <string name="app_name">CarWash</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="nao_tem_conta">Não tem conta?</string>
    <string name="criar_agora">Criar Agora</string>
    <string name="bem_vindo_ao_carwash">Bem vindo ao CarWash</string>
    <string name="criar_uma_conta">CRIAR UMA CONTA</string>
    <string name="descricao">Visualize o melhor do seu carro</string>
    <string name="telefone">Telefone</string>
    <string name="nome">Nome</string>
    <string name="criar_conta">Criar conta</string>
    <string name="ja_tem_uma_conta">Já tem uma conta?</string>
    <string name="salvar">Salvar</string>
    <string name="editar_conta">Editar conta</string>
    <string name="veiculo">Vamos cadastrar seu veículo? Nos informe abaixo os dados dele:</string>
    <string name="modelo_veiculo">Modelo</string>
    <string name="placa_veiculo">Placa</string>
    <string name="ano_veiculo">Ano</string>
    <string name="cor_veiculo">Cor</string>
    <string name="descricao_servico">Lavagem exterior completa e pneus, aspiração no interior do veiculo.</string>
    <string name="titulo_servico">Lavagem Rápida</string>
    <string name="preco_servico">R$50,00</string>
    <string name="tempo_servico">30 - 45 min</string>
    <string name="confira_seu_historico">Confira seu histórico</string>
    <string name="agendar_limpeza">Agendar Limpeza</string>
    <string name="status">Status</string>
    <string name="servicos">Serviços</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="ola_ana_paula">Olá, Ana Paula</string>
    <string name="meus_veiculos">Meus Veículos</string>
    <string name="em_andamento">Em andamento</string>
    <string name="vehicle">Sedan</string>
    <string name="crie_sua_nova_senha">Vamos recuperar sua conta</string>
    <string name="senha_atual">Senha Atual</string>
    <string name="senha_nova">Senha Nova</string>
    <string name="confirme_a_senha_nova">Confirme a senha nova</string>
    <string name="agende_seu_servico">Agende seu serviço</string>
    <string name="escolha_a_data">Escolha a data:</string>
    <string name="data">Data escolhida: _/_/_</string>
    <string name="escolha_o_horario">Escolha o horário</string>
    <string name="escola_seu_hor_rio">Escolha seu horário:</string>
    <string name="escola_seu_servico">Escolha seu serviço:</string>
    <string name="escola_sua_placa">Escolha sua placa:</string>



    <string-array name="Horarios">
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
    </string-array>

    <string-array name="Serviços">
        <item>Limpeza simples</item>
        <item>Limpeza completa</item>
        <item>Higienização</item>
        <item>Limpeza a seco</item>
        <item>Polimento de faróis</item>
    </string-array>
    <string name="update_data_vehicle">Edite os dados do seu veículo?</string>

    <string name="title">Excluir</string>
    <string name="title_email">E-mail enviado</string>
    <string name="message">Tem certeza que deseja excluir esse cadastro?</string>
    <string name="message_status">Tem certeza que deseja excluir esse agendamento?</string>
    <string name="message_email">Verifique sua caixa de entrada ou lixo eletônico.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="ok">Ok</string>
    <string name="digite_o_seu_e_mail">Digite o seu e-mail</string>
    <string name="descricao_redefir_senha">Enviaremos um link de redefinição de senha para o seu e-mail</string>
    <string name="enviar">Enviar</string>

</resources>