<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/margin_top_default_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/line_ed"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/margin_top_default"
            app:layout_constraintEnd_toEndOf="@+id/ivLogo"
            app:layout_constraintStart_toStartOf="@+id/ivLogo"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/line_ed"
            android:hint="@string/senha"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueci_minha_senha"
            android:textSize="@dimen/body_2"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_button"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_conta"
            android:textSize="@dimen/body_2"
            app:layout_constraintBottom_toBottomOf="@+id/tvNotAccount"
            app:layout_constraintStart_toEndOf="@+id/tvNotAccount" />

        <TextView
            android:id="@+id/tvNotAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nao_tem_conta"
            android:textSize="@dimen/body_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>