<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="criarConta"
            type="com.example.carwash.model.CreateAccountData" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_uma_conta"
            android:textColor="@color/blue_light"
            android:fontFamily="@font/raleway_bold"
            android:textSize="@dimen/body_5"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="@+id/ivLogo"
            app:layout_constraintStart_toStartOf="@+id/ivLogo"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textColor="@color/blue_dark_primary"
            android:fontFamily="@font/raleway_bold"
            android:textSize="@dimen/body_3"
            android:layout_marginTop="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

        <ImageView
            android:id="@+id/ivDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/elevation"
            android:src="@drawable/ic_line"
            app:layout_constraintEnd_toEndOf="@+id/tvDescription"
            app:layout_constraintStart_toStartOf="@+id/tvDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"/>

        <EditText
            android:id="@+id/etNameChangeAccount"
            android:layout_width="@dimen/altura_edit_text"
            android:layout_height="@dimen/largura_edit_text"
            android:backgroundTint="@color/blue_light"
            android:hint="@string/nome"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:fontFamily="@font/raleway_medium"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="@dimen/padding_drawable_icons_default"
            android:layout_marginTop="@dimen/margin_top_default_create_account"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

        <EditText
            android:id="@+id/etEmailChangeAccount"
            android:layout_width="@dimen/altura_edit_text"
            android:layout_height="@dimen/largura_edit_text"
            android:backgroundTint="@color/blue_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:maxLength="50"
            android:fontFamily="@font/raleway_medium"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/padding_drawable_icons_default"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="@+id/etNameChangeAccount"
            app:layout_constraintStart_toStartOf="@+id/etNameChangeAccount"
            app:layout_constraintTop_toBottomOf="@+id/etNameChangeAccount"/>

        <EditText
            android:id="@+id/etPasswordChangeAccount"
            android:layout_width="@dimen/altura_edit_text"
            android:layout_height="@dimen/largura_edit_text"
            android:backgroundTint="@color/blue_light"
            android:hint="@string/senha"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:fontFamily="@font/raleway_medium"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_drawable_icons_default"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="@+id/etEmailChangeAccount"
            app:layout_constraintStart_toStartOf="@+id/etEmailChangeAccount"
            app:layout_constraintTop_toBottomOf="@+id/etEmailChangeAccount" />

        <EditText
            android:id="@+id/etTelephoneChangeAccount"
            android:layout_width="@dimen/altura_edit_text"
            android:layout_height="@dimen/largura_edit_text"
            android:backgroundTint="@color/blue_light"
            android:hint="@string/telefone"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:maxLength="14"
            android:minEms="8"
            android:fontFamily="@font/raleway_medium"
            android:drawableLeft="@drawable/ic_telephone"
            android:drawablePadding="@dimen/padding_drawable_icons_default"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordChangeAccount"
            app:layout_constraintStart_toStartOf="@+id/etPasswordChangeAccount"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordChangeAccount" />


        <Button
            android:id="@+id/btnCreateChangeAccount"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_top_default_create_account"
            android:background="@drawable/button_costumization"
            android:text="@string/criar_conta"
            android:textSize="@dimen/body_4"
            android:fontFamily="@font/raleway_medium"
            android:elevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="@+id/etTelephoneChangeAccount"
            app:layout_constraintStart_toStartOf="@+id/etTelephoneChangeAccount"
            app:layout_constraintTop_toBottomOf="@+id/etTelephoneChangeAccount" />

        <TextView
            android:id="@+id/tvJaTemConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/ja_tem_uma_conta"
            android:textColor="@color/grey"
            android:textSize="@dimen/body_3"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintStart_toStartOf="@+id/btnCreateChangeAccount"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateChangeAccount" />

        <TextView
            android:id="@+id/tvLoginCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/login"
            android:layout_marginLeft="@dimen/elevation"
            android:textColor="@color/blue_dark_primary"
            android:textSize="@dimen/body_3"
            app:layout_constraintStart_toEndOf="@+id/tvJaTemConta"
            app:layout_constraintTop_toTopOf="@+id/tvJaTemConta" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>