<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivToolbar"
            android:layout_width="458dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_rectangle_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitleEsqueciMinhaSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_conta"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/body_5"
            android:layout_marginTop="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_voltar_passowrd"
            android:layout_width="@dimen/btn_arrow_layout_width"
            android:layout_height="@dimen/btn_arrow_layout_height"
            android:layout_marginLeft="@dimen/elevation"
            android:layout_marginTop="@dimen/elevation"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_seta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etPasswordAtual"
            android:layout_width="@dimen/altura_edit_text"
            android:layout_height="@dimen/largura_edit_text"
            android:backgroundTint="@color/blue_light"
            android:hint="@string/nome"
            android:fontFamily="@font/raleway_medium"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_drawable_icons_default"
            android:layout_marginTop="@dimen/margin_top_grid_default"
            app:layout_constraintEnd_toEndOf="@+id/tvTitleEsqueciMinhaSenha"
            app:layout_constraintStart_toStartOf="@+id/tvTitleEsqueciMinhaSenha"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleEsqueciMinhaSenha"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="@dimen/altura_edit_text"
            android:layout_height="@dimen/largura_edit_text"
            android:backgroundTint="@color/blue_light"
            android:hint="@string/email"
            android:fontFamily="@font/raleway_medium"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_drawable_icons_default"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordAtual"
            app:layout_constraintStart_toStartOf="@+id/etPasswordAtual"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordAtual"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="@dimen/altura_edit_text"
            android:layout_height="@dimen/largura_edit_text"
            android:backgroundTint="@color/blue_light"
            android:layout_marginTop="@dimen/margin_top"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_drawable_icons_default"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/etNewPassword"
            app:layout_constraintStart_toStartOf="@+id/etNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />


        <Button
            android:id="@+id/btnSaveAccount"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_top_default_create_account"
            android:background="@drawable/button_costumization"
            android:text="@string/salvar"
            android:textSize="@dimen/body_4"
            android:fontFamily="@font/raleway_medium"
            android:elevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="@+id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/etConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"  />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>